# CS425Project

./: .gitignore  CS425Project.sln  CS425Project.uproject  README.md  convertCSVToNew.py  index.md  oldCSVVMS.csv
Binaries/Win64/: CS425ProjectEditor.target  UE4Editor.modules  eye_chart.py
Config/: DefaultEngine.ini  DefaultGame.ini  steamvr_ue_editor_app.json
Config/SteamVRBindings/: gamepad.json  holographic_controller.json  hpmotioncontroller.json  indexhmd.json  knuckles.json  oculus_touch.json  rift.json  steamvr_manifest.json  vive.json  vive_controller.json  vive_cosmos_controller.json  vive_pro.json  vive_tracker.json  vive_tracker_camera.json  vive_tracker_chest.json  vive_tracker_handed.json  vive_tracker_keyboard.json  vive_tracker_left_elbow.json  vive_tracker_left_foot.json  vive_tracker_left_knee.json  vive_tracker_left_shoulder.json  vive_tracker_right_elbow.json  vive_tracker_right_foot.json  vive_tracker_right_knee.json  vive_tracker_right_shoulder.json  vive_tracker_waist.json
Content/ConsultationRoom/Maps/: Scene.umap
Content/ConsultationRoom/Materials/: MI_BaseSinkCabinet.uasset  MI_CeilingLamp.uasset  MI_Clipboard.uasset  MI_DiaryPencilHolder.uasset  MI_ExecutiveChair.uasset  MI_GlassCabinet.uasset  MI_GlassCabinetGlass.uasset  MI_Hanger.uasset  MI_Lamp.uasset  MI_Med12.uasset  MI_Med345.uasset  MI_MedicalBed.uasset  MI_MedicalTrolleyCart.uasset  MI_Monitor.uasset  MI_Mouse.uasset  MI_Negatoscope.uasset  MI_NegatoscopeMag.uasset  MI_PaperBin.uasset  MI_Poster.uasset  MI_Poster1.uasset  MI_SaddleStool.uasset  MI_ScissorsBandage.uasset  MI_StethoscopeTongueDepressor.uasset  MI_Table.uasset  MI_VisitorChair.uasset  MI_WhiteKeyboard.uasset  MI_Window.uasset  M_CeilingLampLight.uasset  M_Coat.uasset  M_Floor.uasset  M_Glass.uasset  M_HandSanitizerDispenser.uasset  M_NegatoscopeON.uasset  M_Wall.uasset
Content/ConsultationRoom/Meshes/: SM_Bandage.uasset  SM_BandageBox.uasset  SM_BaseSinkCabinet.uasset  SM_CeilingLamp.uasset  SM_Clipboard.uasset  SM_Diary.uasset  SM_ExecutiveChair.uasset  SM_GlassCabinet.uasset  SM_HandSanitizerDispenser.uasset  SM_Hanger.uasset  SM_Med1.uasset  SM_Med2.uasset  SM_Med3.uasset  SM_Med4.uasset  SM_Med5.uasset  SM_MedicalBed.uasset  SM_MedicalCoat.uasset  SM_MedicalLamp.uasset  SM_MedicalTrolleyCart.uasset  SM_Monitor.uasset  SM_Mouse.uasset  SM_Mousepad.uasset  SM_Negatoscope.uasset  SM_Wall.uasset  (+16 more)
Content/Map/: MainScene.umap  MainScene_BuiltData.uasset  StartupMap.umap  StartupMap_BuiltData.uasset
Content/TestBlueprintClasses/: AConvergenceBP.uasset  ASaccadeVerticalBP.uasset  ASaccadesHorizontalBP.uasset  ASmoothPursuitBP.uasset  ATestControllerBP.uasset  AUIController.uasset  AUIControllerBP.uasset  AVMSBP.uasset  AVMSBP_2.uasset  AVORHorizontalBP.uasset  AVORVerticalBP.uasset
Content/UI/: Convergence.uasset  ConvergenceUI.uasset  DizzinessObject.uasset  HMD.uasset  SaccadeHorizontal.uasset  SaccadeHorizontalUI.uasset  SaccadeVertical.uasset  SaccadeVerticalUI.uasset  SmoothPersuit.uasset  SmoothPersuitUI.uasset  VMS.uasset  VMSUI.uasset  VORHorizontal.uasset  VORHorizontalUI.uasset  VORVertical.uasset  VORVerticalUI.uasset  ballMovement.uasset  ballMovement_C.uasset  dizzinessUI1.uasset  fogginessUI.uasset  headacheUI.uasset  nauseaUI.uasset  saccadeDemo.uasset  saccadeDemo_C.uasset
Content/UIControlAI/: IPCLoop_AIController.uasset  IPCLoop_BehaviorTree.uasset  IPCLoop_Blackboard.uasset  IPCLoop_CheckMessageTask.uasset  IPCLoop_OpenUITask.uasset  IPCLoop_ReceiveMessageTask.uasset  IPCLoop_StartIPCTask.uasset
Content/concussionTests/: HMD.uasset  SmoothPersuit.uasset  VMS.uasset  VORHorizontal.uasset  VORvertical.uasset  convergence.uasset  dizzinessUI1.uasset  fogginessUI.uasset  headacheUI.uasset  nauseaUI.uasset  saccadeDemo.uasset  saccadeHorizontal.uasset  saccadeVertical.uasset  smoothpursuit.uasset
DesktopInterface/: APPLICATION_CONSTANTS.h  CMakeLists.txt  DesktopInterface.cpp  DesktopInterface.h  InstallPythonDependencies.bat  PDFGenerator.cpp  PDFGenerator.h  PatientData.cpp  PatientData.h  PipelineThread.cpp  PipelineThread.h  QDataControlWidget.cpp  QDataControlWidget.h  QDataPane.cpp  QDataPane.h  QHomeWindow.cpp  QHomeWindow.h  QPatientDataPane.cpp  QPatientDataPane.h  QResultsPane.cpp  QResultsPane.h  QResultsWindow.cpp  QResultsWindow.h  QResultsWindow.ui  QSimulationControlPane.cpp  QSimulationControlPane.h  QSimulationControls.cpp  QSimulationControls.h  QVRControlWidget.cpp  QVRControlWidget.h  TempCSVLoader.cpp  TempCSVLoader.h  WindowsIPCControls.cpp  csvsaveload.cpp  csvsaveload.h  eye_chart.py  generatePDF.bat  generatePDF.py  graph_generator.py  main.cpp  (+1 more)
DesktopInterface/tex/: test.tex
DesktopInterface/unit_tests/: TestCSVSaveLoad.cpp  TestPDFGeneration.cpp  TestRunner.cpp  UnitTestMain.h
Map/: StartupMap.umap
Saved/Autosaves/: PackageRestoreData.json
Source/: CS425Project.Target.cs  CS425ProjectEditor.Target.cs
Source/CS425Project/: AInterfaceNetworkHandler.cpp  AInterfaceNetworkHandler.h  CS425Project.Build.cs  CS425Project.cpp  CS425ProjectGameModeBase.cpp  CS425ProjectGameModeBase.h
UnrealIPCInterface/: CMakeLists.txt  README  SharedMemoryBuffer.h  UnrealIPCController.cpp
UnrealIPCInterface/include/boost-1_64/boost/: static_assert.hpp
UnrealIPCInterface/include/boost-1_64/boost/config/compiler/: gcc.hpp
UnrealIPCInterface/include/boost-1_64/boost/container/detail/: pair.hpp
UnrealIPCInterface/include/boost-1_64/boost/date_time/: date.hpp
UnrealIPCInterface/include/boost-1_64/boost/intrusive/: rbtree_algorithms.hpp
UnrealIPCInterface/include/boost-1_64/boost/iterator/detail/: config_def.hpp
UnrealIPCInterface/include/boost-1_64/boost/type_traits/: is_convertible.hpp
UnrealIPCInterfaceV2/: WindowsIPCControls.cpp  WindowsIPCControls.h
_layouts/: default.html
concussionTests/: VMS.uasset  VORHorizontal.uasset  saccadeVertical.uasset  smoothpursuit.uasset
shared_include/: EyeFrameData.h  EyeSessionData.h  EyeTestEnum.h  FullPatientData.cpp  FullPatientData.h  Pipeline_Constants.h  SymptomScores.h  TempCSVFiles.h  UnrealIPCController.h  WindowsIPCControls.h
(+132 files in other folders)
